# zhook

./: CMakeLists.txt
include/: zhook.h
src/: asm_helper.h  binary_file.cpp  binary_file.h  common.h  core.cpp  core.h  elf_manager.cpp  elf_manager.h  hook_impl.cpp  hook_impl.h  hook_manager.cpp  hook_manager.h  log.h  zhook.cpp
src/common/: log.cpp  log.h
src/core/: elf.cpp  elf.h  stu.h
